tests/snapshots/tests__full_moon_test_suite@unops.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
local negativeLiteral = -3
local negativeVariable = -x
local notLiteral = not true
local notVariable = not x
local length = #x

