tests/snapshots/tests__full_moon_test_suite@while.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
while condition do
	call()
	break
end

