tests/snapshots/tests__ignores@multiline-block-ignore-1.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
local foo = bar
-- stylua: ignore start
local bar   =     baz
-- stylua: ignore end
local bar = baz

