tests/snapshots/tests__ignores@multiline-block-ignore-2.lua.snap
---
source: tests/tests.rs
assertion_line: 56
expression: format(&contents)

---
local foo = bar
-- stylua: ignore start
local bar   =     baz
local bar   =     baz
-- stylua: ignore end
local bar = baz

