tests/snapshots/tests__ignores@multiline-block-ignore-no-ending.lua.snap
---
source: tests/tests.rs
assertion_line: 56
expression: format(&contents)

---
local foo = bar
-- stylua: ignore start
local bar   =     baz
local bar   =     baz
local bar   =     baz

