tests/snapshots/tests__ignores@multiline-block-ignore-no-starting.lua.snap
---
source: tests/tests.rs
assertion_line: 56
expression: format(&contents)

---
local foo = bar
local bar = baz
local bar = baz
-- stylua: ignore end
local bar = baz

