tests/snapshots/tests__ignores@multiline-block-ignore-scope-no-ending.lua.snap
---
source: tests/tests.rs
assertion_line: 56
expression: format(&contents)

---
local foo = bar
do
    -- stylua: ignore start
    local bar   =     baz
    local bar   =     baz
end
local bar = baz

