tests/snapshots/tests__ignores@singleline-ignore-1.lua.snap
---
source: tests/tests.rs
assertion_line: 56
expression: format(&contents)

---
local foo = bar
-- stylua: ignore
local bar   =     baz

